Colab을 통해 생성됨

--- a/Untitled45.ipynb
+++ b/Untitled45.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyORBZf2DpuPecXaV3qw6Yp2",
+      "authorship_tag": "ABX9TyNBsQPmIZR36T1K3Zs87Nv1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,104 +30,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "새 Colab 노트북을 엽니다.\n",
-        "필요한 라이브러리를 설치합니다:"
+        "교통표지판 데이터 크롤링"
       ],
       "metadata": {
-        "id": "r8foPiqGqBP0"
+        "id": "nap5JOjkSAtb"
       }
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "JwuHbNoep9Kp"
+        "id": "Hw6WrIz4P8pX"
       },
       "outputs": [],
       "source": [
-        "!pip install ultralytics\n",
-        "!pip install opencv-python-headless\n"
+        "!pip install requests beautifulsoup4 Pillow\n"
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "2. 필요한 라이브러리를 임포트합니다:"
-      ],
-      "metadata": {
-        "id": "Of2Z72uiqH1T"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "from ultralytics import YOLO\n",
-        "import cv2\n",
-        "from google.colab.patches import cv2_imshow\n",
-        "from google.colab import files\n",
-        "import io\n",
-        "import numpy as np\n"
+        "   import requests\n",
+        "   from bs4 import BeautifulSoup\n",
+        "   import os\n",
+        "   from PIL import Image\n",
+        "   from io import BytesIO\n",
+        "   from google.colab import files\n"
       ],
       "metadata": {
-        "id": "wnz6eQrqqTFQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "영상 파일을 업로드합니다:"
-      ],
-      "metadata": {
-        "id": "iFDdQWL5qWG3"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "uploaded = files.upload()\n",
-        "video_path = next(iter(uploaded))\n"
-      ],
-      "metadata": {
-        "id": "39mxOHEiqZIa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "유튜브에서 가지고 올때"
-      ],
-      "metadata": {
-        "id": "K7TPBRTUq21p"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install pytube\n",
-        "!pip install --upgrade pytube\n"
-      ],
-      "metadata": {
-        "id": "RnkzPdTXq_Ea"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install yt-dlp\n",
-        "import yt_dlp\n",
-        "\n",
-        "ydl_opts = {'outtmpl': '%(title)s.%(ext)s'}\n",
-        "with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
-        "    ydl.download([\"https://www.youtube.com/shorts/VznzSxEzWbc\"])\n"
-      ],
-      "metadata": {
-        "id": "khKiL8S5xT3Z"
+        "id": "FBRAbGq7SHNz"
       },
       "execution_count": null,
       "outputs": []
@@ -136,7 +67,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Nc00V2CtzM5D"
+        "id": "vxVq9jhzSJ4o"
       },
       "execution_count": null,
       "outputs": []
@@ -144,54 +75,47 @@
     {
       "cell_type": "code",
       "source": [
-        "# 필요한 라이브러리 설치\n",
-        "!pip install ultralytics opencv-python-headless pytube\n",
+        "# 검색어 리스트\n",
+        "search_terms = ['속도제한', '횡단보도', '과속방지턱', '어린이보호', '도로공사중', '자전거', '상습정체구간', '직진금지', '진입금지', '주정차금지', '차높이제한']\n",
         "\n",
-        "import cv2\n",
-        "from ultralytics import YOLO\n",
-        "from google.colab.patches import cv2_imshow\n",
+        "for search_term in search_terms:\n",
+        "    # 이미지를 저장할 폴더 생성\n",
+        "    if not os.path.exists(search_term):\n",
+        "        os.makedirs(search_term)\n",
         "\n",
-        "# YOLOv8 모델 로드\n",
-        "model = YOLO('yolov8x.pt')  # yolov8n.pt 파일이 Colab 환경에 있어야 합니다.\n",
-        "# 영상 파일 경로 지정\n",
-        "video_path = \"/content/[김연경] 241210 흥국생명 vs 페퍼저축은행 기가막히게 득점하는 김연경 #김연경 #배구 #여자배구 #volleyball #kimyeonkoung.webm\"  # 실제 영상 파일 경로로 변경하세요\n",
-        "# 영상 파일 열기\n",
-        "cap = cv2.VideoCapture(video_path)\n",
+        "    # Google 이미지 검색 URL\n",
+        "    url = f\"https://www.google.com/search?q={search_term}&tbm=isch\"\n",
         "\n",
-        "# 결과 영상 저장 설정\n",
-        "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-        "out = cv2.VideoWriter('output.mp4', fourcc, 30.0, (int(cap.get(3)), int(cap.get(4))))\n",
+        "    # 웹 페이지 가져오기\n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
         "\n",
-        "# 영상 처리\n",
-        "while cap.isOpened():\n",
-        "    success, frame = cap.read()\n",
-        "    if success:\n",
-        "        # YOLOv8로 프레임 분석\n",
-        "        results = model(frame)\n",
+        "    # 이미지 태그 찾기\n",
+        "    img_tags = soup.find_all('img')\n",
         "\n",
-        "        # 결과 시각화\n",
-        "        annotated_frame = results[0].plot()\n",
+        "    # 이미지 다운로드\n",
+        "    for i, img in enumerate(img_tags):\n",
+        "        try:\n",
+        "            img_url = img['src']\n",
+        "            if img_url.startswith('http'):\n",
+        "                img_data = requests.get(img_url).content\n",
+        "                img = Image.open(BytesIO(img_data))\n",
+        "                img.save(f\"{search_term}/{search_term}_{i}.jpg\")\n",
+        "                print(f\"Downloaded: {search_term}_{i}.jpg\")\n",
+        "        except:\n",
+        "            print(f\"Error downloading image {i}\")\n",
         "\n",
-        "        # 결과 프레임 저장\n",
-        "        out.write(annotated_frame)\n",
+        "    print(f\"Crawling completed for {search_term}!\")\n",
         "\n",
-        "        # 20프레임마다 결과 표시 (선택사항)\n",
-        "        if cap.get(cv2.CAP_PROP_POS_FRAMES) % 20 == 0:\n",
-        "            cv2_imshow(annotated_frame)\n",
-        "    else:\n",
-        "        break\n",
+        "    # 다운로드한 이미지들을 zip 파일로 압축\n",
+        "    !zip -r {search_term}.zip {search_term}\n",
         "\n",
-        "# 리소스 해제\n",
-        "cap.release()\n",
-        "out.release()\n",
-        "from google.colab import files\n",
-        "\n",
-        "# 결과 영상 다운로드\n",
-        "files.download('output.mp4')\n",
-        "\n"
+        "    # zip 파일 다운로드\n",
+        "    from google.colab import files\n",
+        "    files.download(f\"{search_term}.zip\")"
       ],
       "metadata": {
-        "id": "1NYuTdVWyD1T"
+        "id": "Qy9Of_XyVC4k"
       },
       "execution_count": null,
       "outputs": []
